[package]
name = "netter"
version = "0.6.0"
edition = "2024"
description = "Netter is a CLI tool for fast and easy server startup!"
license = "MIT"
repository = "https://github.com/bjfssd757/Netter"

[workspace]
members = [
    "netter_core",
    "netter_logger",
    "netter_plugger",
    "netter_service",
    "netter_test"
]
resolver = "2"

[dependencies]
netter_logger = "0.1.1"
clap = { version="4.5.35", features=["derive"] }
# derive_more = { version="2.0.1", features=[ "full" ] }
log = "0.4.27"
# serde = { version="1.0.219", features=["derive"] }
# serde_json = "1.0.140"
tokio = { version="1.44.2", features=["full"] }
bincode = "1.3"
os_info = "3.10.0"
# netter_core = "0.1.3"
netter_core = { path="./netter_core" }
reqwest = "0.12.15"
zip = "2.6.1"
flate2 = "1.1.1"
tar = "0.4.44"

[profile.release]
lto = true
strip = true
panic = 'abort'
