[package]
name = "netter_core"
version = "0.1.3"
edition = "2024"
description = "Core for Netter project"
license = "MIT"
repository = "https://github.com/bjfssd757/Netter"

[dependencies]
diesel = { version = "2.2.9", features = ["postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version="1.6.0", features=["full"] }
hyper-util = { version="0.1.11", features=["full"] }
lazy_static = "1.5.0"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
url = "2.5.4"
log = "0.4.27"
clap = { version="4.5.35", features=["derive"] }
netter_logger = "0.1.1"
serde = { version="1.0.219", features=["derive"] }
derive_more = { version="2.0.1", features=[ "full" ] }
tokio = { version="1.44.2", features=["full"] }
bincode = "1.3"
serde_json = "1.0.140"
libloading = "0.8.6"
