[package]
name = "netter_core"
version = "0.2.0"
edition = "2024"
description = "Core for Netter project"
license = "MIT"
repository = "https://github.com/bjfssd757/Netter"

[dependencies]
# diesel = { version = "2.2.9", features = ["postgres"] }
# dotenvy = "0.15.7"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version="1.6.0", features=["full"] }
hyper-util = { version="0.1.11", features=["full"] }
rustls = { version = "0.23.26", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "logging"] }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["rustls-tls-webpki-roots"] }
# toml = "0.8.20"
url = "2.5.4"
log = "0.4.27"
serde = { version="1.0.219", features=["derive"] }
derive_more = { version="2.0.1", features=[ "full" ] }
tokio = { version="1.44.2", features=["full"] }
serde_json = "1.0.140"
libloading = "0.8.6"
base64 = "0.22.1"
axum = { version = "0.8.9", features = ["macros"]}
serde_urlencoded = "0.7.1"
axum-server = { version = "0.8.0", default-features = false, features = ["tls-rustls-no-provider"] }
netter_sdk = { version = "0.1.0", path = "../netter_sdk" }
