[package]
name = "netter_plugger"
version = "0.1.1"
edition = "2024"
description = "Netter plugger is a crate for easy development plugins for netter RDL"
license = "MIT"
repository = "https://github.com/bjfssd757/Netter"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
lazy_static = "1.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
ctor = "0.4.2"

[lib]
proc-macro = true
