[package]
name = "netter_service"
version = "0.4.2"
edition = "2024"

[dependencies]
log = "0.4.27"
serde = { version="1.0.219", features=["derive"] }
tokio = { version="1.44.2", features=["full"] }
bincode = "1.3"
netter_logger = "0.1.1"
lazy_static = "1.5.0"
# netter_core = "0.1.3"
netter_core = { path="../netter_core" }
uuid = { version="1.16.0", features=["v4"] }
chrono = "0.4.41"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"

[target.'cfg(unix)'.dependencies]
directories-next = "2.0"